@@ -1392,6 +1392,13 @@ namespace libtorrent
 		m_extensions.push_back(ext);
 	}
 
+	void torrent::remove_extension(boost::shared_ptr<torrent_plugin> ext)
+	{
+		extension_list_t::iterator i = std::find(m_extensions.begin(), m_extensions.end(), ext);
+		if (i == m_extensions.end()) return;
+		m_extensions.erase(i);
+	}
+
 	void torrent::add_extension(boost::function<boost::shared_ptr<torrent_plugin>(torrent*, void*)> const& ext
 		, void* userdata)
 	{
@@ -2722,10 +2729,10 @@ namespace libtorrent
 
 			req.bind_ip = bind_interface;
 
-			if (settings().get_bool(settings_pack::anonymous_mode))
+			if (settings().get_bool(settings_pack::force_proxy))
 			{
-				// in anonymous_mode we don't talk directly to trackers
-				// only if there is a proxy
+				// in force_proxy mode we don't talk directly to trackers
+				// unless there is a proxy
 				std::string protocol = req.url.substr(0, req.url.find(':'));
 				int proxy_type = m_ses.proxy().type;
 	
@@ -5731,7 +5738,7 @@ namespace libtorrent
 
 	bool torrent::resolving_countries() const
 	{
-		return m_resolve_countries && !m_ses.settings().get_bool(settings_pack::anonymous_mode);
+		return m_resolve_countries && !m_ses.settings().get_bool(settings_pack::force_proxy);
 	}
 	
 	void torrent::resolve_peer_country(boost::shared_ptr<peer_connection> const& p) const
